src/objects/Apttus_Billing__ForecastedBillingSchedule__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Billing__BillToAccountId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the corresponding Bill to Account.</description>
        <inlineHelpText>Id of the corresponding Bill to Account.</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
        <relationshipName>ForecastedBillingSchedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingDayOfMonth__c</fullName>
        <description>The Billing Day of Month that was is use when the Billing Schedule was generated.</description>
        <inlineHelpText>The Billing Day of Month that was is use when the Billing Schedule was generated.</inlineHelpText>
        <label>Billing Day of Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingRule__c</fullName>
        <description>The Billing Rule specified on the corresponding Order Line Item.</description>
        <inlineHelpText>The Billing Rule specified on the corresponding Order Line Item.</inlineHelpText>
        <label>Billing Rule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Apttus_Billing__BillingRule</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ChargeType__c</fullName>
        <description>The charge type associated with the Product or Service.</description>
        <inlineHelpText>The charge type associated with the Product or Service.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Apttus_Billing__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ConfigurationId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the associated Product Configuration.</description>
        <inlineHelpText>Id of the associated Product Configuration.</inlineHelpText>
        <label>Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
        <relationshipName>ForecastedBillingSchedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Description__c</fullName>
        <description>The Schedule description.</description>
        <inlineHelpText>The Schedule description.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FeeAmount__c</fullName>
        <description>The fee for the corresponding billing period.</description>
        <inlineHelpText>The fee for the corresponding billing period.</inlineHelpText>
        <label>Fee Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ForecastedBillingSummaryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Id of the Forecasted Billing Summary this Forecasted Billing Schedule contributes to</description>
        <inlineHelpText>The Id of the Forecasted Billing Summary this Forecasted Billing Schedule contributes to</inlineHelpText>
        <label>Forecasted Billing Summary</label>
        <referenceTo>Apttus_Billing__ForecastedBillingSummary__c</referenceTo>
        <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
        <relationshipName>ForecastedBillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__HideInvoiceDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the Schedule will be present of the corresponding Invoice.</description>
        <inlineHelpText>Indicates whether or not the Schedule will be present of the corresponding Invoice.</inlineHelpText>
        <label>Hide Invoice Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoicedScheduleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Id of the invoiced and superseded Billing Schedule that is the source of the credit.</description>
        <inlineHelpText>The Id of the invoiced and superseded Billing Schedule that is the source of the credit.
Will be null if Schedule pertains to a debit.</inlineHelpText>
        <label>Invoiced Schedule</label>
        <referenceTo>Apttus_Billing__ForecastedBillingSchedule__c</referenceTo>
        <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
        <relationshipName>ForecastedBillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__IsSuperseded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will initially be false and gets set to true when the Billing Schedule is superseded when a Cancellation or
Amendment is applied to corresponding Asset Line Item.</description>
        <inlineHelpText>Will initially be false and gets set to true when the Billing Schedule is superseded when a Cancellation or
Amendment is applied to corresponding Asset Line Item.</inlineHelpText>
        <label>Is Superseded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__LineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the associated Line Item.</description>
        <inlineHelpText>Id of the associated Line Item.</inlineHelpText>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
        <relationshipName>ForecastedBillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the corresponding Account Location.</description>
        <inlineHelpText>Id of the corresponding Account Location. Can be null.</inlineHelpText>
        <label>Location Id</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
        <relationshipName>ForecastedBillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated Payment Term. Can be null.</description>
        <inlineHelpText>Id of the associated Payment Term.</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
        <relationshipName>ForecastedBillingSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PeriodEndDate__c</fullName>
        <description>The billing period end date.</description>
        <inlineHelpText>The billing period end date.</inlineHelpText>
        <label>Period End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PeriodStartDate__c</fullName>
        <description>The billing period start date.</description>
        <inlineHelpText>The billing period start date.</inlineHelpText>
        <label>Period Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PriceType__c</fullName>
        <description>The price type of the Product of Service.</description>
        <inlineHelpText>The price type of the Product of Service.</inlineHelpText>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Apttus_Billing__PriceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ProductName__c</fullName>
        <description>The name of the associated product.</description>
        <inlineHelpText>The name of the associated product.</inlineHelpText>
        <label>Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ProposalId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the associated Quote/Proposal.</description>
        <inlineHelpText>Id of the associated Quote/Proposal.</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Forecasted Billing Schedules</relationshipLabel>
        <relationshipName>ForecastedBillingSchedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ReadyForInvoiceDate__c</fullName>
        <description>The date when the corresponding Order is ready for generating an Invoice.</description>
        <inlineHelpText>The date when the corresponding Order is ready for generating an Invoice.</inlineHelpText>
        <label>Ready For Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the ship-to Account.</description>
        <inlineHelpText>Id of the ship-to Account.</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecasted Billing Schedules (Ship To)</relationshipLabel>
        <relationshipName>Forecasted_Billing_Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Status__c</fullName>
        <description>The Schedule status.</description>
        <inlineHelpText>The Schedule status.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Apttus_Billing__BillingScheduleStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Forecasted Billing Schedule</label>
    <nameField>
        <displayFormat>FBS- {00000000}</displayFormat>
        <label>Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasted Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>